# lyra-linux-os

./: .gitignore  CMakeLists.txt  readme.md
boot/: CMakeLists.txt  boot.c  start.s
common/: boot_info.h  cpu_instr.h  types.h
image/: kernel.elf
kernel/: CMakeLists.txt  kernel.lds
kernel/core/: memory.c  task.c
kernel/cpu/: cpu.c  cpu.h  irq.c
kernel/device/: keyboard.c  mouse.c  time.c
kernel/include/: cpu.h  irq.h  os_cfg.h
kernel/include/core/: memory.h  task.h
kernel/include/device/: keyboard.h  mouse.h  time.h
kernel/include/ipc/: mutex.h  semaphore.h
kernel/include/tools/: bitmap.h  klib.h  list.h
kernel/init/: init.c  init.h  start.s
kernel/ipc/: mutex.c  semaphore.c
kernel/tools/: bitmap.c  bitmap.h  klib.c  list.c  log.c  log.h
loader/: CMakeLists.txt  loader.h  loader_16.c  loader_16.h  loader_32.c  start.s
script/: qemu-debug.sh  write-image.sh
